refatorando Dockerfile e docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 services:
     app:
-        build: .
+        build: 
+          args: 
+              user: 'lucas-borges'
+              uid: 1000 
+          dockerfile: Dockerfile 
         container_name: app
         environment:
           - DB_HOST=db
@@ -10,10 +14,11 @@ services:
         volumes:
           - .:/var/www
         networks:
-          - app-network
+          - app-network-01
         depends_on:
           - db
           - redis
+
     nginx:
         build: .docker/nginx
         container_name: nginx
@@ -24,9 +29,25 @@ services:
         volumes:
           - .:/var/www
         networks:
-          - app-network
+          - app-network-01
         depends_on:
           - app
+    
+    queue:
+        build: 
+            args: 
+                user: 'lucas-borges'
+                uid: 1000
+            dockerfile: Dockerfile
+        container_name: queue    
+        command: 'php artisan queue:work'
+        restart: unless-stopped
+        volumes: 
+            - .:/var/www
+        depends_on: 
+            - redis
+        networks: 
+            - app-network-01
 
     db:
         build: .docker/mysql
@@ -35,22 +56,25 @@ services:
         restart: always
         tty: true
         ports:
-          - "3306:3306"
+          - "3308:3306"
         volumes:
           - ./.docker/dbdata:/var/lib/mysql
         environment:
           - MYSQL_DATABASE=laravel
           - MYSQL_ROOT_PASSWORD=root
         networks:
-          - app-network
+          - app-network-01
 
     redis:
         image: redis:alpine
-        expose:
-          - 6379
+        volumes:
+          - ./.docker/volumes/redis:/data
+        container_name: redis
+        ports:
+          - 6379:6379
         networks:
-          - app-network
+          - app-network-01
 
 networks:
-    app-network:
+    app-network-01:
         driver: bridge
