refatorando controllers e utilizando service

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DRIVER=public
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -54,8 +54,12 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 MICRO_02_URL=
 MICRO_02_TOKEN=
 
+RABBITMQ_QUEUE=queue_micro01
 RABBITMQ_HOST=
 RABBITMQ_PORT=
 RABBITMQ_USER=
 RABBITMQ_PASSWORD=
 RABBITMQ_VHOST=
+RABBITMQ_WORKER=
+
+FRONTEND_URL=
